<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSmoke"
    >

    <directives.ITFTextView
        android:id="@+id/txtHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_heading_text"
        android:textSize="@dimen/_22ssp"
        android:textStyle="normal"
        app:fontColor="@color/uiPlaceGreen"
        android:fontFamily="@string/font_helvetica_narrow_bold"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <directives.ITFTextView
        android:id="@+id/txtDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_details_text"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        app:fontColor="@color/Gray"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_below="@+id/txtHeading"
        android:gravity="start"
        />

    <directives.ITFEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDetails"
        android:hint="Email"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        app:fontColor="@color/Black"
        android:textSize="@dimen/_12ssp"
        android:background="@drawable/border_curved_with_shadow_white"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        />

    <directives.ITFButton
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtEmail"
        android:text="@string/forgot_send_button"
        android:textAllCaps="false"
        android:maxLines="1"
        app:fontColor="@color/White"
        android:textSize="@dimen/_12ssp"
        android:background="@drawable/border_curved_with_shadow_green"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        />


</RelativeLayout>
