<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/sliderContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_alignParentTop="true">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"

            />

        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal"></LinearLayout>

    </RelativeLayout>

    <directives.ITFImageView
        android:id="@+id/imgShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share_black_24dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/sliderContainer"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <directives.ITFImageView
        android:id="@+id/imgFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite_border_black_24dp"
        android:layout_toStartOf="@+id/imgShare"
        android:layout_below="@+id/sliderContainer"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <directives.ITFTextView
        android:id="@+id/txtInfoHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sliderContainer"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/sub_cat_detail_info_heading"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:fontColor="@color/Black" />

    <LinearLayout
        android:id="@+id/llVenueNameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInfoHeading"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <directives.ITFTextView
            android:id="@+id/txtVenueName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/sub_cat_detail_venue_name"
            android:textSize="@dimen/_12ssp"
            app:fontColor="@color/Black" />

        <directives.ITFTextView
            android:id="@+id/tvVenueName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="start"
            android:textSize="@dimen/_12ssp"
            app:fontColor="@color/Black" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llVenueDetailContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llVenueNameContainer"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <directives.ITFTextView
            android:id="@+id/txtVenueDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/sub_cat_detail_venue_detail"
            android:textSize="@dimen/_12ssp"
            app:fontColor="@color/Black" />

        <directives.ITFTextView
            android:id="@+id/tvVenueDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="start"
            android:textSize="@dimen/_12ssp"
            app:fontColor="@color/Black" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llVenueWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llVenueDetailContainer"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <directives.ITFTextView
            android:id="@+id/txtVenueWebsite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/sub_cat_detail_venue_website"
            android:textSize="@dimen/_12ssp"
            app:fontColor="@color/Black" />

        <directives.ITFTextView
            android:id="@+id/tvVenueWebsite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="start"
            android:textSize="@dimen/_12ssp"
            app:fontColor="@color/Black" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llVenueContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llVenueWebsite"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <directives.ITFTextView
            android:id="@+id/txtVenueContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/sub_cat_detail_venue_contact"
            android:textSize="@dimen/_12ssp"
            app:fontColor="@color/Black" />

        <directives.ITFTextView
            android:id="@+id/tvVenueContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="start"
            android:textSize="@dimen/_12ssp"
            app:fontColor="@color/Black" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llVenueAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llVenueContact"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <directives.ITFTextView
            android:id="@+id/txtVenueAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/sub_cat_detail_venue_address"
            android:textSize="@dimen/_12ssp"
            app:fontColor="@color/Black" />

        <directives.ITFTextView
            android:id="@+id/tvVenueAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="start"
            android:textSize="@dimen/_12ssp"
            app:fontColor="@color/Black" />


    </LinearLayout>

    <RatingBar
        android:id="@+id/rbCatRating"
        style="@style/RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llVenueAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:numStars="5"
        android:progressTint="@color/colorPrimary"
        android:rating="0"
        android:stepSize="0.5" />

    <directives.ITFTextView
        android:id="@+id/txtShowDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rbCatRating"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/sub_cat_detail_show_direction"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:fontColor="@color/Black" />

    <View
        android:id="@+id/separatorOffers"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/txtShowDirection"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@color/Black" />

    <directives.ITFTextView
        android:id="@+id/txtVenueOffers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separatorOffers"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/sub_cat_detail_venue_offers"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:fontColor="@color/Black" />

    <directives.ITFRecyclerView
        android:id="@+id/rlVenueOffersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVenueOffers"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:nestedScrollingEnabled="false" />

    <View
        android:id="@+id/separatorReviews"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/rlVenueOffersRecyclerView"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@color/Black" />

    <directives.ITFTextView
        android:id="@+id/txtVenueReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separatorReviews"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/sub_cat_detail_venue_reviews"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:fontColor="@color/Black" />

    <directives.ITFRecyclerView
        android:id="@+id/rlVenueReviewsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVenueReviews"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:nestedScrollingEnabled="false" />

    <View
        android:id="@+id/separatorWriteReview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/rlVenueReviewsRecyclerView"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@color/Black" />

    <directives.ITFTextView
        android:id="@+id/txtWriteReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separatorWriteReview"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/sub_cat_detail_venue_write_review"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_60sdp"
        app:fontColor="@color/Blue" />


</RelativeLayout>
